--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -20,6 +20,13 @@
     </dependency>
     
     <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4</artifactId>
+      <version>4.7</version>
+    </dependency>
+    
+    
+    <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>4.12</version>
@@ -67,6 +74,28 @@
 				<target>${target.jvm}</target>
 			</configuration>
 		</plugin>
+      
+      	<!-- <plugin>
+				<groupId>com.khubla.antlr</groupId>
+				<artifactId>antlr4test-maven-plugin</artifactId>
+				<version>${antlr4test-maven-plugin.version}</version>
+				<configuration>
+					<verbose>true</verbose>
+					<showTree>false</showTree>
+					<entryPoint>program</entryPoint>
+					<grammarName>ECMAScript</grammarName>
+					<packageName></packageName>
+					<exampleFiles>examples/</exampleFiles>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+		</plugin> -->
+      	
       
     </plugins>
   </build>
